homelab/apps/media/base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.9
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /tv
          name: shows
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: shows
        persistentVolumeClaim:
          claimName: medias
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
