homelab/apps/media/base/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - port: 8989
