homelab/apps/media/base/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "sonarr"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
